--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,5 @@
-# This file is a "template" of what your parameters.yml file should look like
+# This file is a "template" of what your .env file should look like
 # Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
-parameters:
-    # A secret key that's used to generate certain security-related tokens
-    secret:            ThisTokenIsNotSoSecretChangeIt
+# A secret key that's used to generate certain security-related tokens
+SYMFONY__SECRET=ThisTokenIsNotSoSecretChangeIt
