--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -12,4 +12,5 @@ monolog:
             path:  "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
         console:
-            type:  console
+            type: console
+            process_psr_3_messages: false
