switch to flex.

--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,9 @@
-# This file is a "template" of what your .env file should look like
-# Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
-# http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
-# A secret key that's used to generate certain security-related tokens
-SYMFONY__SECRET=ThisTokenIsNotSoSecretChangeIt
+# This file is a "template" of which env vars needs to be defined in your configuration or in an .env file
+# Set variables here that may be different on each deployment target of the app, e.g. development, staging, production.
+# https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
+
+###> symfony/framework-bundle ###
+APP_ENV=dev
+APP_DEBUG=1
+APP_SECRET=51eaab235936bc40ee90799cb9868ad2
+###< symfony/framework-bundle ###
