--- a/.env.dist
+++ b/.env.dist
@@ -7,3 +7,7 @@ APP_ENV=dev
 APP_DEBUG=1
 APP_SECRET=51eaab235936bc40ee90799cb9868ad2
 ###< symfony/framework-bundle ###
+
+###> php-amqplib/rabbitmq-bundle ###
+RABBITMQ_URL=amqp://guest:guest@localhost:5672
+###< php-amqplib/rabbitmq-bundle ###
