Bind to interfaces for console input and output.

--- a/config/container.yaml
+++ b/config/container.yaml
@@ -10,6 +10,8 @@ services:
 
     Symfony\Component\Console\Input\ArgvInput: ~
     Symfony\Component\Console\Output\ConsoleOutput: ~
+    Symfony\Component\Console\Output\OutputInterface: '@Symfony\Component\Console\Output\ConsoleOutput'
+    Symfony\Component\Console\Input\InputInterface: '@Symfony\Component\Console\Input\ArgvInput'
     Clue\JsonStream\StreamingJsonParser:
         shared: false
 
