--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -24,6 +24,6 @@
     </filter>
     <logging>
         <log type="coverage-html" target="build/coverage"/>
-        <log type="junit" target="build/junit.xml"/>
+        <log type="coverage-clover" target="build/logs/clover.xml"/>
     </logging>
 </phpunit>
