--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "php": "^7.1.3",
         "bangpound/consul-bundle": "^0.1.0@dev",
         "clue/json-stream": "^0.1.0",
-        "dlapps/consul-php-envvar": "^1.1",
+        "dlapps/consul-php-envvar": "dev-SDKv3",
         "guzzlehttp/oauth-subscriber": "^0.3.0",
         "mkraemer/react-pcntl": "^2.2",
         "php-amqplib/rabbitmq-bundle": "^1.13",
@@ -73,5 +73,11 @@
         "branch-alias": {
             "dev-master": "1.0.x-dev"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:bangpound/consul-php-envvar.git"
+        }
+    ]
 }
